# comp551p1

./: Data.py  Guidelines.txt  README.md  pyproject.toml
src/: __main__.py
src/docs/: generate_pdf.py
